style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

/* global css */

* {
  text-decoration: none;
  list-style: none;
  box-sizing: border-box;
}

ul {
  padding: 0;
}

#app {
  font-family: 'Inter', sans-serif;
  background-color: #030712;
  color: #fff;
}

.title {
  padding: 50px 0;
}

.stacks-list i {
  font-size: 32px;
}

.card {
  background-color: #0f172a;
  color: #fff;
}

.close {
  color: #fff;
}

.modal-content {
  background-color: #0f172a;
  color: #fff;
}

#home, #projects, #contact {
  padding-bottom: 50px;
}

/* home */

#home .card {
  width: 400px;
  /* height: 600px; */
}

#home .card .card-image {
  text-align: center;
}

#home .card .card-footer {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
}

#home img {
  height: 250px;
  width: 250px;
}

/* projects */

#projects .card {
  transition: 0.4s ease-out;
}

#projects .card:hover {
  border: 1px solid #dd2476;
  color: rgba(250, 250, 250, 0.8);
  cursor: pointer;
}

#projects .card img {
  width: 300px;
  height: 200px;
  object-fit: cover;
}

#projects .card .card-title {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

#loginModal.modal {
  color: dark;
}

#projects .card {
  display: flex;
  flex-direction: row;
}

/* medias */
/* small medias */
@media screen and (max-width: 768px) {

  section {
    padding: 20px;
  }
  
  #projects .card.card {
    flex-direction: column;
  }
}

/* big boy monitors */
@media screen and (min-width: 1441px) {

  #home .card img {
    height: 300px;
    width: 300px;
  }

}

